Fixed responsive width and text alignment issue in about section

--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -2,20 +2,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-gap: 95px;
-    @media (max-width: 800px) {
-            grid-gap: 10px;
-            justify-content: center;
-        }
+    @media (max-width: 1169px) {
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+    // @media (max-width: 800px) {
+    //     grid-gap: 10px;
+    // }
     .about-image {
-        @media (max-width: 1119px) {
-            margin: 0 auto;
-        }
-        @media (max-width: 800px) {
-            width: 400px;
-        }
-        @media (max-width: 410px) {
-            width: 300px;
-        }
         img {
             width: 100%;
         }
@@ -24,18 +18,6 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        align-items: center;
-        @media (max-width: 1119px) {
-            margin: 0 auto;
-        }
-        @media (max-width: 800px) {
-            max-width: 400px;
-            justify-content: center;
-            
-        }
-        @media (max-width: 410px) {
-            max-width: 300px;
-        }
         p.about-title {
             font-family: 'Montserrat', sans-serif;
             color: #1e1e1e;
@@ -49,7 +31,6 @@
             line-height: 3rem;
             font-family: 'Lato', sans-serif;
             color: #696969;
-            margin: 0 50px;
             width: 100%;
             padding-bottom: 15px;
             @media (max-width: 800px) {
@@ -57,9 +38,6 @@
             justify-content: center;
             margin: 0; 
             }
-        }
-        span {
-            font-weight: bold;
         }
     }
 }
