--- a/styles/partials/_portfolio.scss
+++ b/styles/partials/_portfolio.scss
@@ -4,7 +4,6 @@
     grid-gap: 95px;
     @media (max-width: 1119px) {
         justify-content: center;
-        grid-gap: 10px;
     }
 }
 
@@ -26,7 +25,7 @@
 }
 
 .portfolio-image, .portfolio-text {
-    height: 360px;
+    // height: 360px;
     max-width: 535px;
 }
 
@@ -92,6 +91,12 @@ p.portfolio-blurb {
 }
 
 .portfolio-image {
+    background-color: white;
+    video {
+        background-image: white !important;
+        width: 100%;
+        margin: 0 auto;
+    }
     img {
         width: 100%;
         margin: 0 auto;
@@ -100,7 +105,6 @@ p.portfolio-blurb {
         max-width: 400px;
         margin: 0 auto;
         height: 300px;
-        
     }
     @media (max-width: 410px) {
         max-width: 300px;
